fix: Overlap

--- a/components/Carousel.module.css
+++ b/components/Carousel.module.css
@@ -30,7 +30,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    aspect-ratio: 3/4;
+    aspect-ratio: 9/16;
 }
 
 .carousel__item:first-child {
@@ -42,7 +42,6 @@
     z-index: 1;
     height: 100%;
     width: auto;
-    aspect-ratio: 9/16;
     overflow: hidden;
     /* border-radius: var(--scale-8); */
     border-radius: var(--scale-10);
